Fixed a bug in oblige child mechanism

After making the global selection a mask root layer may have a mask,
but still can ask its only child layer to share the projection.

There was another reason for the bug: the assert in createThumbnail
didn't take into account that the device may be empty.

BUG:290563